footer in mobile mode

--- a/index.html
+++ b/index.html
@@ -689,9 +689,9 @@ description: meta.description
         </div>
 
         <!-- Exchanges & Partnes -->
-        <div class="inner columns aligned">
+        <div class="inner columns aligned" id="exchanges-partner-structure">
           <div class="exchanges_column">
-            <h3>{% t exchanges_title %}</h3>
+            <h3 id="exchanges-partner-title-structure">{% t exchanges_title %}</h3>
             <a href="https://global.bittrex.com/Market/Index?MarketName=BTC-HYDRO" target="_blank" rel="noreferrer"><img alt="bittrex" src="assets/images/exchanges/bittrex.png" /></a>
             <a href="https://www.coinex.com/exchange?currency=btc&dest=hydro" target="_blank" rel="noreferrer"><img alt="coinex" src="assets/images/exchanges/coinex.png" /></a>
             <a href="https://www.bitforex.com/en/spot/hydro_eth" target="_blank" rel="noreferrer"><img alt="bitforex" src="assets/images/exchanges/bitforex.png" /></a>
@@ -705,6 +705,8 @@ description: meta.description
             <a href="https://idex.market/eth/hydro" target="_blank" rel="noreferrer"><img alt="idex" src="assets/images/exchanges/idex.png" /></a>
             <a href="https://app.stex.com/en/trade/pair/BTC/HYDRO" target="_blank" rel="noreferrer"><img alt="stex" src="assets/images/exchanges/stex.png" /></a>
           </div>
+        </div>
+        <div class="inner columns aligned" id="partner-structure">
           <div class="partner_column">
             <h3>{% t partners_title %}</h3>
             <a href="https://chain.link/" target="_blank" rel="noreferrer"><img alt="chainlink" src="assets/images/partners/chainlink.png" /></a>
@@ -764,7 +766,7 @@ description: meta.description
       <!-- Social media section -->
 
       <section class="panel">
-        <div class="inner columns divided">
+        <div class="inner columns divided" id="footer-structure">
           <div class="span-1-2">
             <ul class="contact-icons">
               <li class="icon brands fa-telegram transparent-icon" onclick="location.href='https://t.me/projecthydro'" target="_blank" rel="noreferrer"></li>
