Add media partners

--- a/index.html
+++ b/index.html
@@ -708,18 +708,25 @@ description: meta.description
         </div>
         <div class="inner columns aligned" id="partner-structure">
           <div class="partner_column">
-            <h3>{% t partners_title %}</h3>
+            <h3>{% t partners_integration_title %}</h3>
             <a href="https://chain.link/" target="_blank" rel="noreferrer"><img alt="chainlink" src="assets/images/partners/chainlink.png" /></a>
             <a href="https://sparkpoint.io/" target="_blank" rel="noreferrer"><img alt="sparkpoint" src="assets/images/partners/sparkpoint.png" /></a>
             <a href="https://splinterlands.com?ref=projecthydro" target="_blank"><img alt="splinterlands" src="assets/images/partners/splinterland.png" /></a>
           </div>
+          <div class="inner columns aligned" id="partner-structure">
+            <div class="partner_column">
+              <h3>{% t partners_media_title %}</h3>
+              <a href="https://coinnewsextra.com/" target="_blank" rel="noreferrer"><img alt="coinnewsextra" src="assets/images/partners/coinnewsextra.png" /></a>
+            </div>
+          </div>
 
           <!-- Link columns with overlay buttons-->
-
-          <div class="link-column">
-            <a onclick="overlayDocs()" target="_blank" rel="noreferrer">{% t documentation_title %}</a>
-            <a onclick="overlayTutorial()" target="_blank" rel="noreferrer">{% t tutorial_title %}</a>
-            <a onclick="overlaySnippets()" target="_blank" rel="noreferrer">{% t snippets_title %}</a>
+          <div class="inner columns aligned">
+            <div class="link-column">
+              <a onclick="overlayDocs()" target="_blank" rel="noreferrer">{% t documentation_title %}</a>
+              <a onclick="overlayTutorial()" target="_blank" rel="noreferrer">{% t tutorial_title %}</a>
+              <a onclick="overlaySnippets()" target="_blank" rel="noreferrer">{% t snippets_title %}</a>
+            </div>
           </div>
         </div>
 
