--- a/index.html
+++ b/index.html
@@ -711,6 +711,7 @@ description: meta.description
             <h3>{% t partners_integration_title %}</h3>
             <a href="https://chain.link/" target="_blank" rel="noreferrer"><img alt="chainlink" src="assets/images/partners/chainlink.png" /></a>
             <a href="https://sparkpoint.io/" target="_blank" rel="noreferrer"><img alt="sparkpoint" src="assets/images/partners/sparkpoint.png" /></a>
+            <a href="https://www.axpire.com/consumer/" target="_blank" rel="noreferrer"><img alt="axpire" src="assets/images/partners/axpire.png" /></a>
             <a href="https://splinterlands.com?ref=projecthydro" target="_blank"><img alt="splinterlands" src="assets/images/partners/splinterland.png" /></a>
           </div>
           <div class="inner columns aligned" id="partner-structure">
