create tutorial index

--- a/index.html
+++ b/index.html
@@ -766,6 +766,7 @@ description: meta.description
               <a href="pages/snippets/setting-up-your-dapps-allowance.html" target="_blank" rel="noreferrer">{% t snippets_1 %}</a>
               <a href="pages/snippets/setting-up-your-resolver.html" target="_blank" rel="noreferrer">{% t snippets_2 %}</a>
               <a href="pages/snippets/use-material-imports.html" target="_blank" rel="noreferrer">{% t snippets_3 %}</a>
+              <a href="pages/tutorial-index.html" target="_blank" rel="noreferrer">Tutorial index</a>
             </div>
           </div>
         </div>
