--- a/pages/tutorial/walkthrough.html
+++ b/pages/tutorial/walkthrough.html
@@ -12,11 +12,25 @@
   <link href="/pages/css/application.css" rel="stylesheet" type="text/css" />
   <link href="/pages/css/tutorial.css" rel="stylesheet" type="text/css" />
 
-  <script>
-
-  </script>
-
 <body>
+
+  <button id="burger" class="open-main-nav">
+    <span class="burger"></span>
+    <span class="burger-text">Menu</span>
+  </button>
+  <nav class="main-nav" id="main-nav">
+    <ul>
+      <li><a id="menu-link" href="/pages/tutorial/test-ether.html">Test Ether</a></li>
+      <li><a id="menu-link" href="/pages/tutorial/test-hydro.html">Test Hydro</a></li>
+      <li><a id="menu-link" href="/pages/tutorial/what-is-snowflake.html">Snowflake</a></li>
+      <li><a id="menu-link" href="/pages/tutorial/dappstore-best-practices.html">Best practices</a></li>
+      <li><a id="menu-link" href="/pages/snippets/setting-up-your-dapps-allowance.html">dApp Allowance</a></li>
+      <li><a id="menu-link" href="/pages/snippets/setting-up-your-resolver.html">Resolver</a></li>
+      <li><a id="menu-link" href="/pages/snippets/use-material-imports.html">Material Imports</a></li>
+    </ul>
+  </nav>
+  </div>
+  </div>
 
   <div class="wrapper-test-ether" style="">
     <h1>dAppstore walkthrough</h1>
@@ -66,3 +80,14 @@
   </div>
 
 </body>
+
+<script type="text/javascript">
+  let burger = document.getElementById('burger'),
+    nav = document.getElementById('main-nav'),
+    link = document.getElementById('menu-link')
+
+  burger.addEventListener('click', function(e) {
+    this.classList.toggle('is-open');
+    nav.classList.toggle('is-open');
+  });
+</script>
