--- a/pages/snippets/setting-up-your-dapps-allowance.html
+++ b/pages/snippets/setting-up-your-dapps-allowance.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="author" content="Ulviux" />
+  <meta name="keywords" content="Hydro, Security, DeFi, API, Fintech, Blockchain">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-site-verification" content="QUEWXblJgvi_M5ZvPG4WNPr_xY3aMQxqPV4U1iBmxHk" />
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
