switch home btn for home li

--- a/pages/tutorial/test-hydro.html
+++ b/pages/tutorial/test-hydro.html
@@ -21,6 +21,7 @@
   </button>
   <nav class="main-nav" id="main-nav">
     <ul>
+      <li><a id="menu-link" href="/index.html">Home</a></li>
       <li><a id="menu-link" href="/pages/tutorial/test-ether.html">Test Ether</a></li>
       <li><a id="menu-link" href="/pages/tutorial/test-hydro.html">Test Hydro</a></li>
       <li><a id="menu-link" href="/pages/tutorial/what-is-snowflake.html">Snowflake</a></li>
@@ -63,9 +64,6 @@
         <br> <br>
         Enjoy!
       </h5>
-      <br>
-      <br>
-      <a href="https://projecthydro.org" target="_blank" class="tutorial-button">Take me back!</a>
     </div>
 
   </div>
