--- a/pages/tutorial/test-ether.html
+++ b/pages/tutorial/test-ether.html
@@ -21,6 +21,7 @@
   </button>
   <nav class="main-nav" id="main-nav">
     <ul>
+      <li><a id="menu-link" href="/index.html">Home</a></li>
       <li><a id="menu-link" href="/pages/tutorial/test-ether.html">Test Ether</a></li>
       <li><a id="menu-link" href="/pages/tutorial/test-hydro.html">Test Hydro</a></li>
       <li><a id="menu-link" href="/pages/tutorial/what-is-snowflake.html">Snowflake</a></li>
@@ -91,8 +92,6 @@
 
     <div class="ending-credits">
       <h5>This quick tutorial is everything you need to get test Ethereum for the Rinkeby test network.</h5>
-      <br><br>
-      <a href="https://projecthydro.org" target="_blank" class="tutorial-button">Take me back!</a>
     </div>
 
   </div>
