--- a/pages/tutorial/what-is-snowflake.html
+++ b/pages/tutorial/what-is-snowflake.html
@@ -22,6 +22,7 @@
   </button>
   <nav class="main-nav" id="main-nav">
     <ul>
+      <li><a id="menu-link" href="/index.html">Home</a></li>
       <li><a id="menu-link" href="/pages/tutorial/test-ether.html">Test Ether</a></li>
       <li><a id="menu-link" href="/pages/tutorial/test-hydro.html">Test Hydro</a></li>
       <li><a id="menu-link" href="/pages/tutorial/what-is-snowflake.html">Snowflake</a></li>
@@ -70,13 +71,6 @@
     <div class="step">
       <h3></h3>
       <h5></h5>
-    </div>
-
-    <div class="ending-credits">
-      <h5></h5>
-      <br>
-      <br>
-      <a href="https://projecthydro.org" target="_blank" class="tutorial-button">Take me back!</a>
     </div>
 
   </div>
