--- a/pages/snippets/use-material-imports.html
+++ b/pages/snippets/use-material-imports.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <title>How to use Material Imports</title>
-  <link href="/pages/css/application.css" rel="stylesheet" type="text/css" />
+
   <link href="/pages/css/tutorial.css" rel="stylesheet" type="text/css" />
 
 <body>
@@ -34,7 +34,7 @@
   </div>
   </div>
 
-  <div class="wrapper-test-ether" style="">
+  <div class="wrapper">
     <h1>How to use Material Imports</h1>
 
     <div class="prelude">
