--- a/pages/tutorial/test-hydro.html
+++ b/pages/tutorial/test-hydro.html
@@ -10,9 +10,8 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <title>Getting some test Hydro</title>
-  <link href="/pages/css/application.css" rel="stylesheet" type="text/css" />
   <link href="/pages/css/tutorial.css" rel="stylesheet" type="text/css" />
+  <title>Getting some test Hydro</title>
 
 <body>
   <button id="burger" class="open-main-nav">
@@ -33,44 +32,24 @@
   </nav>
   </div>
   </div>
-
-  <div class="wrapper-test-ether" style="">
+  <div class="wrapper">
     <h1>Getting some test-hydro</h1>
-
-    <div class="prelude">
-      <h3>Intro</h3>
-      <h5>Getting some testnet hydro for you dApps is pretty straight forward. <br>
-        You will need to have metamask wallet set to the rinkeby network and some testnet ether to begin.</h5>
-    </div>
-
-    <div class="step">
-      <h3>Step 1</h3>
-      <h5>Navigate to the<a href="https://rinkeby.etherscan.io/token/0x4959c7f62051d6b2ed6eaed3aaee1f961b145f20#writeContract" target="_blank" style="text-decoration:none;color:white;"> Hydro testnet contract </a> and click Connect to web3, choose
-        metamask and confirm.</h5>
-    </div>
-
-    <div class="step">
-      <h3>Step 2</h3>
-      <h5>Once your connected, scroll down to the third entry named getMoreTokens.</h5>
-    </div>
-
-    <div class="step">
-      <h3>Step 3</h3>
-      <h5>Click write and confirm the transaction in metamask, it should pop up automatically.</h5>
-    </div>
-
-    <div class="ending-credits">
-      <h5>The transaction will confirm shortly and you will recieve 10000 Testnet Hydro.
-        <br> <br>
-        Enjoy!
-      </h5>
-    </div>
-
+    <h5>Getting some testnet hydro for you dApps is pretty straight forward.
+      You will need to have metamask wallet set to the rinkeby network and some testnet ether to begin.</h5>
+    <h3>Step 1</h3>
+    <h5>Navigate to the<a href="https://rinkeby.etherscan.io/token/0x4959c7f62051d6b2ed6eaed3aaee1f961b145f20#writeContract" target="_blank" style="text-decoration:none;color:white;"> Hydro testnet contract </a> and click Connect to web3, choose
+      metamask and confirm.</h5>
+    <h3>Step 2</h3>
+    <h5>Once your connected, scroll down to the third entry named getMoreTokens.</h5>
+    <h3>Step 3</h3>
+    <h5>Click write and confirm the transaction in metamask, it should pop up automatically.</h5>
+    <h5>The transaction will confirm shortly and you will recieve 10000 Testnet Hydro.
+      <h3>Enjoy!</h3>
+    </h5>
   </div>
-
+  </div>
 </body>
-
-<script type="text/javascript">
+<script>
   let burger = document.getElementById('burger'),
     nav = document.getElementById('main-nav'),
     link = document.getElementById('menu-link')
