--- a/pages/tutorial/what-is-snowflake.html
+++ b/pages/tutorial/what-is-snowflake.html
@@ -10,12 +10,11 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <title>What is a Snowflake?</title>
-  <link href="/pages/css/application.css" rel="stylesheet" type="text/css" />
   <link href="/pages/css/tutorial.css" rel="stylesheet" type="text/css" />
+  <title>What is a Snowflake?</title>
+</head>
 
 <body>
-
   <button id="burger" class="open-main-nav">
     <span class="burger"></span>
     <span class="burger-text">Menu</span>
@@ -34,50 +33,45 @@
   </nav>
   </div>
   </div>
-
-  <div class="wrapper-test-ether" style="">
+  <div class="wrapper">
     <h1>What is a Snowflake?</h1>
-
-    <div class="prelude">
-      <h3>Intro</h3>
-      <h5></h5>
-    </div>
-
-    <div class="step">
-      <h3></h3>
-      <h5></h5>
-    </div>
-
-    <div class="step">
-      <h3></h3>
-      <h5></h5>
-    </div>
-
-    <div class="step">
-      <h3></h3>
-      <h5></h5>
-    </div>
-
-    <div class="step">
-      <h3></h3>
-      <h5></h5>
-    </div>
-
-    <div class="step">
-      <h3></h3>
-      <h5></h5>
-    </div>
-
-    <div class="step">
-      <h3></h3>
-      <h5></h5>
-    </div>
-
+    <h5>Snowflake is an identity protocol designed to protect private data from identity theft on the blockchain
+      by providing a major barrier to identity theft attempts.
+      Let us break it down for you.</h5>
+    <h5>Just as we have real-world means of identifications like drivers licenses, passports, access badges, etc.
+      We believe that we should be able to replicate this when it comes to the digital world. </h5>
+    <h5>Identity management is still a major issue in the world today with cases of identity theft increasing every other day.
+      Many people had their identities stolen and used to commit fraud and other bad practices due to the fact there is still
+      a gap when it comes to digital identification and we believe blockchain provides a way out of this particular problem.
+    </h5>
+    <h5>Hence, why we decided to build up our decentralized digital identity protocol; called “Snowflakes”
+      Snowflake builds an extensible identity following the ERC 1484 digital identity standard.</h5>
+    <h5>Each end-user of a snowflake-powered application is minted a globally unique Ethereum Identification Number
+      which connects to all of their owned Ethereum addresses and ties the user to arbitrarily formatted data.</h5>
+    <h5>Snowflake handles the complexities of identity management -trustlessly connecting to new user devices,
+      allowing applications to pay gas costs on behalf of the user, and allowing a user to interact with multiple applications and instances of
+      identity with a common user experience.</h5>
+    <h5>In essence, snowflakes creates a digital identity for you on the Hydro blockchain which is immutable and secure.
+      This digital identity can be connected to your wallets and other accounts supported by the
+      Hydro blockchain thereby allowing you to make transactions with your highly secured identity.</h5>
+    <h3>How can I create a snowflake identity?</h3>
+    <h5>Open the dApp store, First you will need to obtain ETH and HYDRO(Link on how to obtain),
+      Once you have obtained ETH and HYDRO, You will need to generate a HydroID
+      <a href="https://drive.google.com/file/d/1ljPep6Qzs__F_MvtvB9CaspTttHB1USr/view?usp=drivesdk" target="_blank" style="text-decoration:none;color:white;">drive</a>,
+      After claiming a Hydro ID, you will observe tabs to manage dApps (Resolvers), manage addresses, and deposit and withdraw tokens from your Snowflake Identity Token.
+    </h5>
+    <h5>You will observe both the ETH and HYDRO balances in your wallet as well as the HYDRO balance in your Snowflake Identity Token.
+      -Pic example
+      -At this point, you can view all dApps built into the dAppstore,
+      add or remove them from your dashboard, add or remove addresses from which you want to access your dashboard,
+      and deposit and withdraw HYDRO into your Snowflake Identity Token.
+      Voila, you’ve just created your highly secured digital identity on Hydro Snowflake Dapp.
+      Keep an eye out on more tutorials on how to navigate through the Snowflake Dapp.
+    </h5>
+    <h3>Take care now!</h3>
   </div>
-
 </body>
-
-<script type="text/javascript">
+<script>
   let burger = document.getElementById('burger'),
     nav = document.getElementById('main-nav'),
     link = document.getElementById('menu-link')
