--- a/pages/snippets/setting-up-your-resolver.html
+++ b/pages/snippets/setting-up-your-resolver.html
@@ -10,9 +10,9 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <title>Setting up your resolver</title>
-  <link href="/pages/css/application.css" rel="stylesheet" type="text/css" />
   <link href="/pages/css/tutorial.css" rel="stylesheet" type="text/css" />
+  <title>Setting up your resolver</title>
+</head>
 
 <body>
   <button id="burger" class="open-main-nav">
@@ -33,47 +33,9 @@
   </nav>
   </div>
   </div>
-
-  <div class="wrapper-test-ether" style="">
+  <div class="wrapper">
     <h1>Setting up your resolver</h1>
-
-    <div class="prelude">
-      <h3>Intro</h3>
-      <h5></h5>
-    </div>
-
-    <div class="step">
-      <h3></h3>
-      <h5></h5>
-    </div>
-
-    <div class="step">
-      <h3></h3>
-      <h5></h5>
-    </div>
-
-    <div class="step">
-      <h3></h3>
-      <h5></h5>
-    </div>
-
-    <div class="step">
-      <h3></h3>
-      <h5></h5>
-    </div>
-
-    <div class="step">
-      <h3></h3>
-      <h5></h5>
-    </div>
-
-    <div class="step">
-      <h3></h3>
-      <h5></h5>
-    </div>
-
   </div>
-
 </body>
 
 <script type="text/javascript">
