--- a/pages/tutorial-portal.html
+++ b/pages/tutorial-portal.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link href="/pages/css/tutorial.css" rel="stylesheet" type="text/css" />
-  <title>Snowflake dAppstore Best Practices</title>
+  <title>Tutorial Portal</title>
 </head>
 
 <body>
@@ -33,12 +33,13 @@
   </nav>
   </div>
   </div>
-  <div class="wrapper">
-    <h1>Snowflake dAppstore Best Practices</h1>
+  <div class="tutorial-portal-wrapper">
+    <span><img id="hydro-logo" src="/assets/images/hydro_logo.svg"/></span>
+    <h1>Tutorial Portal</h1>
+    <h3>Welcome to the Hydro tutorial portal!</h3>
   </div>
 </body>
-
-<script type="text/javascript">
+<script>
   let burger = document.getElementById('burger'),
     nav = document.getElementById('main-nav'),
     link = document.getElementById('menu-link')
