--- a/pages/tutorial/walkthrough.html
+++ b/pages/tutorial/walkthrough.html
@@ -10,12 +10,11 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <title>dAppstore walkthrough</title>
-  <link href="/pages/css/application.css" rel="stylesheet" type="text/css" />
   <link href="/pages/css/tutorial.css" rel="stylesheet" type="text/css" />
+  <title>dAppstore walkthrough</title>
+</head>
 
 <body>
-
   <button id="burger" class="open-main-nav">
     <span class="burger"></span>
     <span class="burger-text">Menu</span>
@@ -34,50 +33,11 @@
   </nav>
   </div>
   </div>
-
-  <div class="wrapper-test-ether" style="">
+  <div class="wrapper">
     <h1>dAppstore walkthrough</h1>
-
-    <div class="prelude">
-      <h3>Intro</h3>
-      <h5></h5>
-    </div>
-
-    <div class="step">
-      <h3></h3>
-      <h5></h5>
-    </div>
-
-    <div class="step">
-      <h3></h3>
-      <h5></h5>
-    </div>
-
-    <div class="step">
-      <h3></h3>
-      <h5></h5>
-    </div>
-
-    <div class="step">
-      <h3></h3>
-      <h5></h5>
-    </div>
-
-    <div class="step">
-      <h3></h3>
-      <h5></h5>
-    </div>
-
-    <div class="step">
-      <h3></h3>
-      <h5></h5>
-    </div>
-
-
   </div>
-
+  </div>
 </body>
-
 <script type="text/javascript">
   let burger = document.getElementById('burger'),
     nav = document.getElementById('main-nav'),
