added basic light mode

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ description: meta.description
 
       <section class="panel">
         <div class="intro joined">
-          <h2 class="major">{% t ecosystem_title %}</h2>
+          <h2>{% t ecosystem_title %}</h2>
           <p>{% t ecosystem_subline %}</p>
         </div>
         <div class="inner" id="first">
@@ -65,7 +65,7 @@ description: meta.description
       <section class="panel">
         <div class="inner columns aligned" id="protocol-center">
           <div class="intro">
-            <h2 class="major">{% t protocol_title %}</h2>
+            <h2>{% t protocol_title %}</h2>
             <p>{% t protocol_subline %}</p>
           </div>
 
@@ -130,7 +130,7 @@ description: meta.description
 
       <section class="panel">
         <div class="intro">
-          <h2 class="major">{% t team_title %}</h2>
+          <h2>{% t team_title %}</h2>
           <p>{% t team_subline %}</p>
           <div class="fcf-form-group">
             <button onclick="overlayContactUs()">{% t team_contact %}</button>
@@ -509,7 +509,7 @@ description: meta.description
 
       <section class="panel">
         <div class="intro">
-          <h2 class="major">{% t roadmap_title %}</h2>
+          <h2>{% t roadmap_title %}</h2>
           <p>{% t roadmap_subline %}</p>
         </div>
         <div class="inner columns aligned">
@@ -682,7 +682,7 @@ description: meta.description
 
       <section class="panel">
         <div class="intro">
-          <h2 class="major">{% t dappstore_title %}</h2>
+          <h2>{% t dappstore_title %}</h2>
           <p>{% t dappstore_subline %}</p>
           <br>
           <a href="https://dapps.projecthydro.org" target="_blank" rel="noreferrer" class="button">dAppstore</a>
@@ -692,32 +692,32 @@ description: meta.description
         <div class="inner columns aligned" id="exchanges-partner-structure">
           <div class="exchanges_column">
             <h3 id="exchanges-partner-title-structure">{% t exchanges_title %}</h3>
-            <a href="https://global.bittrex.com/Market/Index?MarketName=BTC-HYDRO" target="_blank" rel="noreferrer"><img alt="bittrex" src="assets/images/exchanges/bittrex.png" /></a>
-            <a href="https://www.coinex.com/exchange?currency=btc&dest=hydro" target="_blank" rel="noreferrer"><img alt="coinex" src="assets/images/exchanges/coinex.png" /></a>
-            <a href="https://www.bitforex.com/en/spot/hydro_eth" target="_blank" rel="noreferrer"><img alt="bitforex" src="assets/images/exchanges/bitforex.png" /></a>
-            <a href="https://app.liquid.com/exchange/HYDROBTC" target="_blank" rel="noreferrer"><img alt="liquid" src="assets/images/exchanges/liquid.png" /></a>
-            <a href="https://bq.net/trade/HYDRO-BTC" target="_blank" rel="noreferrer"><img alt="bitsdaq" src="assets/images/exchanges/bitsdaq.png" /></a>
+            <a href="https://global.bittrex.com/Market/Index?MarketName=BTC-HYDRO" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/exchanges/bittrex.png" /></a>
+            <a href="https://www.coinex.com/exchange?currency=btc&dest=hydro" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/exchanges/coinex.png" /></a>
+            <a href="https://www.bitforex.com/en/spot/hydro_eth" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/exchanges/bitforex.png" /></a>
+            <a href="https://app.liquid.com/exchange/HYDROBTC" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/exchanges/liquid.png" /></a>
+            <a href="https://bq.net/trade/HYDRO-BTC" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/exchanges/bitsdaq.png" /></a>
           </div>
           <div class="exchanges_column" id="exchange-column-2">
-            <a href="https://mercatox.com/exchange/HYDRO/BTC" target="_blank" rel="noreferrer"><img alt="mercatox" src="assets/images/exchanges/mercatox.png" /></a>
-            <a href="https://app.uniswap.org/#/swap?outputCurrency=0xebbdf302c940c6bfd49c6b165f457fdb324649bc" target="_blank" rel="noreferrer"><img alt="vcc" src="assets/images/exchanges/uniswap.png" /></a>
-            <a href="https://www.bitmart.com/trade/en?symbol=HYDRO_BTC" target="_blank" rel="noreferrer"><img alt="bitmart" src="assets/images/exchanges/bitmart.png" /></a>
-            <a href="https://idex.market/eth/hydro" target="_blank" rel="noreferrer"><img alt="idex" src="assets/images/exchanges/idex.png" /></a>
-            <a href="https://app.stex.com/en/trade/pair/BTC/HYDRO" target="_blank" rel="noreferrer"><img alt="stex" src="assets/images/exchanges/stex.png" /></a>
+            <a href="https://mercatox.com/exchange/HYDRO/BTC" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/exchanges/mercatox.png" /></a>
+            <a href="https://app.uniswap.org/#/swap?outputCurrency=0xebbdf302c940c6bfd49c6b165f457fdb324649bc" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/exchanges/uniswap.png" /></a>
+            <a href="https://www.bitmart.com/trade/en?symbol=HYDRO_BTC" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/exchanges/bitmart.png" /></a>
+            <a href="https://idex.market/eth/hydro" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/exchanges/idex.png" /></a>
+            <a href="https://app.stex.com/en/trade/pair/BTC/HYDRO" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/exchanges/stex.png" /></a>
           </div>
         </div>
         <div class="inner columns aligned" id="partner-structure">
           <div class="partner_column">
             <h3>{% t partners_integration_title %}</h3>
-            <a href="https://chain.link/" target="_blank" rel="noreferrer"><img alt="chainlink" src="assets/images/partners/chainlink.png" /></a>
-            <a href="https://sparkpoint.io/" target="_blank" rel="noreferrer"><img alt="sparkpoint" src="assets/images/partners/sparkpoint.png" /></a>
-            <a href="https://www.axpire.com/consumer/" target="_blank" rel="noreferrer"><img alt="axpire" src="assets/images/partners/axpire.png" /></a>
-            <a href="https://splinterlands.com?ref=projecthydro" target="_blank"><img alt="splinterlands" src="assets/images/partners/splinterland.png" /></a>
+            <a href="https://chain.link/" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/partners/chainlink.png" /></a>
+            <a href="https://sparkpoint.io/" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/partners/sparkpoint.png" /></a>
+            <a href="https://www.axpire.com/consumer/" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/partners/axpire.png" /></a>
+            <a href="https://splinterlands.com?ref=projecthydro" target="_blank"><img class="exchange-pic" src="assets/images/partners/splinterland.png" /></a>
           </div>
           <div class="inner columns aligned" id="partner-structure">
             <div class="partner_column">
               <h3>{% t partners_media_title %}</h3>
-              <a href="https://coinnewsextra.com/" target="_blank" rel="noreferrer"><img alt="coinnewsextra" src="assets/images/partners/coinnewsextra.png" /></a>
+              <a href="https://coinnewsextra.com/" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/partners/coinnewsextra.png" /></a>
             </div>
           </div>
 
@@ -740,7 +740,7 @@ description: meta.description
 
       <section class="panel">
         <div class="intro">
-          <h2 class="major">Hydro Community</h2>
+          <h2>Hydro Community</h2>
           <p>Visit project hydros official blog or any of our social media accounts to get the latest updates and interact with the Hydro Community!</p>
           <a href="https://blog.projecthydro.org" target="_blank" rel="noreferrer" class="button">Hydro Blog</a> <br>
           <a onclick="overlayDocs()" class="button">{% t documentation_title %}</a>
