Fresh ecosystem layers

--- a/index.html
+++ b/index.html
@@ -48,15 +48,7 @@ description: meta.description
           <p>{% t ecosystem_subline %}</p>
         </div>
         <div class="inner" id="first">
-          <ul class="grid-icons three connected">
-            <li><a id="hydro-2fa"><span class="icon solid fas fa-fingerprint"><span class="label">Hydro 2FA</span></span></a></li>
-            <li><a id="hydro-id"><span class="icon fas fa-id-card"><span class="label">Hydro ID</span></span></a></li>
-          </ul>
-          <ul class="grid-icons three connected">
-            <li><a id="hydro-payments"><span class="icon far fa-credit-card"><span class="label">Hydro Payments</span></span></a></li>
-            <li><a id="hydro-ai"><span class="icon solid fas fa-brain"><span class="label">Hydro AI</span></span></a></li>
-            <li><a id="hydro-docs"><span class="icon far fa-file-alt"><span class="label">Hydro Docs</span></span></a></li>
-          </ul>
+          <img id="ecosystem-pic" src="assets/images/layers.png"/>
         </div>
       </section>
 
