--- a/pages/tutorial-portal.html
+++ b/pages/tutorial-portal.html
@@ -34,10 +34,10 @@
   </div>
   </div>
   <div class="tutorial-portal-wrapper">
-    <span><img id="hydro-logo" src="/assets/images/hydro_logo.svg"/></span>
-    <h1>Tutorial Portal</h1>
-    <h3>Welcome to the Hydro tutorial portal!</h3>
-  </div>
+    <span><img style="opacity:1!important;height:100px;" src="/assets/images/hydro_logo.svg" alt="Hydro Logo" /></span>
+  <h1>Tutorial Portal</h1>
+  <h3>Welcome to Hydro Tutorials!</h3>
+</div>
 </body>
 <script>
   let burger = document.getElementById('burger'),
