add new url to the hydro blog

--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@ description: meta.description
         <div class="intro">
           <h2>Hydro Community</h2>
           <p>Visit project hydros official blog or any of our social media accounts to get the latest updates and interact with the Hydro Community!</p>
-          <a href="https://blog.projecthydro.org" target="_blank" rel="noreferrer" class="button">Hydro Blog</a> <br>
+          <a href="https://projecthydro.org/blog" target="_blank" rel="noreferrer" class="button">Hydro Blog</a> <br>
           <a onclick="overlayDocs()" class="button">{% t documentation_title %}</a>
         </div>
         <div class="inner columns divided" id="footer-structure">
