--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@ description: meta.description
       <section class="panel">
         <div class="intro">
 
-          <h2 style="margin-bottom:2rem;"><a href="https://projecthydro.org/blog" target="_blank" rel="noreferrer">Hydro Blog</a></h2>
+          <h2><a href="https://projecthydro.org/blog" target="_blank" rel="noreferrer">Hydro Blog</a></h2>
           <!-- <p>Visit project hydros official blog or any of our social media accounts to get the latest updates and interact with the Hydro Community!</p> -->
           <span id="blog-feed">Loading latest articles..</span> <br>
 
