--- a/index.html
+++ b/index.html
@@ -516,11 +516,11 @@ description: meta.description
               <label>{% t q3_2020 %}</label>
               <ul class="roadmap_list">
                 <li>{% t product_roadmap_wallet %}</li>
-                <li>{% t product_roadmap_remittance %}</li>
+                <li>{% t product_roadmap_dappstore %}</li>
               </ul>
               <label>{% t q4_2020 %}</label>
               <ul class="roadmap_list">
-                <li>{% t product_roadmap_dappstore %}</li>
+                <li>{% t product_roadmap_remittance %}</li>
                 <li>{% t product_roadmap_voting %}</li>
                 <li>{% t product_roadmap_donation %}</li>
                 <li>{% t product_roadmap_lottery %}</li>
@@ -611,30 +611,30 @@ description: meta.description
             </div>
           </div>
 
-          <!-- Remittance section -->
+          <!-- Remittance Section -->
 
           <div class="span-1-75" id="roadmap-structure">
             <div class="product_list">
               <div class="product_header">
                 <h3>{% t remittance_title %}</h3>
               </div>
-              <label>{% t q3_2020 %}</label>
+              <label>{% t q4_2020 %}</label>
               <ul class="roadmap_list">
                 <li>{% t remittance_1 %}</li>
                 <li>{% t remittance_2 %}</li>
               </ul>
-              <label>{% t q4_2020 %}</label>
+              <label>{% t q1_2021 %}</label>
               <ul class="roadmap_list">
                 <li>{% t remittance_3 %}</li>
               </ul>
-              <label>{% t q1_2021 %}</label>
+              <label>{% t q2_2021 %}</label>
               <ul class="roadmap_list">
                 <li>{% t remittance_4 %}</li>
               </ul>
             </div>
           </div>
 
-          <!-- Marketing section -->
+          <!-- Marketing Section -->
 
           <div class="span-1-75" id="roadmap-structure">
             <div class="product_list">
@@ -645,10 +645,10 @@ description: meta.description
               <ul class="roadmap_list">
                 <li>{% t marketing_1 %}</li>
                 <li>{% t marketing_2 %}</li>
-                <li>{% t marketing_3 %}</li>
               </ul>
               <label>{% t q4_2020 %}</label>
               <ul class="roadmap_list">
+                <li>{% t marketing_3 %}</li>
                 <li>{% t marketing_4 %}</li>
                 <li>{% t marketing_5 %}</li>
                 <li>{% t marketing_6 %}</li>
@@ -674,15 +674,8 @@ description: meta.description
 
       <section class="panel">
         <div class="intro">
-
           <h2><a href="https://projecthydro.org/blog" target="_blank" rel="noreferrer">Hydro Blog</a></h2>
-          <!-- <p>Visit project hydros official blog or any of our social media accounts to get the latest updates and interact with the Hydro Community!</p> -->
           <span id="blog-feed">Loading latest articles..</span> <br>
-
-
-
-
-
         </div>
 
         <!-- Exchanges & Partnes -->
@@ -733,17 +726,13 @@ description: meta.description
         </div>
       </section>
 
-
-
       <!-- Social media section -->
 
       <section class="panel">
         <div class="intro">
           <h2>{% t dappstore_title %}</h2>
-          <p>{% t dappstore_subline %}</p>
-          <br>
-          <a href="https://dapps.projecthydro.org" target="_blank" rel="noreferrer" class="button">dAppstore</a>
-          <br>
+          <p>{% t dappstore_subline %}</p><br>
+          <a href="https://dapps.projecthydro.org" target="_blank" rel="noreferrer" class="button">dAppstore</a><br>
           <a onclick="overlayDocs()" class="button">{% t documentation_title %}</a>
         </div>
         <div class="inner columns divided" id="footer-structure">
