--- a/index.html
+++ b/index.html
@@ -596,6 +596,7 @@ description: meta.description
               </ul>
               <label>{% t q4_2020 %}</label>
               <ul class="roadmap_list">
+                <li>{% t wallet_7 %}</li>
                 <li>{% t wallet_2 %}</li>
                 <li>{% t wallet_3 %}</li>
                 <li>{% t wallet_4 %}</li>
@@ -625,7 +626,8 @@ description: meta.description
               </ul>
               <label>{% t q1_2021 %}</label>
               <ul class="roadmap_list">
-                <li>{% t remittance_3 %}</li>
+                <li>{% t remittance_5 %}</li>
+                <li>{% t remittance_3 %}</li>                
               </ul>
               <label>{% t q2_2021 %}</label>
               <ul class="roadmap_list">
@@ -641,13 +643,10 @@ description: meta.description
               <div class="product_header">
                 <h3>{% t marketing_title %}</h3>
               </div>
-              <label>{% t q3_2020 %}</label>
+              <label>{% t q4_2020 %}</label>
               <ul class="roadmap_list">
                 <li>{% t marketing_1 %}</li>
                 <li>{% t marketing_2 %}</li>
-              </ul>
-              <label>{% t q4_2020 %}</label>
-              <ul class="roadmap_list">
                 <li>{% t marketing_3 %}</li>
                 <li>{% t marketing_4 %}</li>
                 <li>{% t marketing_5 %}</li>
@@ -674,8 +673,8 @@ description: meta.description
 
       <section class="panel">
         <div class="intro">
-          <h2><a href="https://projecthydro.org/blog" target="_blank" rel="noreferrer">Hydro Blog</a></h2>
-          <span id="blog-feed">Loading latest articles..</span> <br>
+          <h2><a href="https://projecthydro.org/blog" target="_blank" rel="noreferrer">{% t blog_title %}</a></h2>
+          <span id="blog-feed">{% t loading %}</span> <br>
         </div>
 
         <!-- Exchanges & Partnes -->
