--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@ description: meta.description
               <label>{% t q1_2021 %}</label>
               <ul class="roadmap_list">
                 <li>{% t remittance_5 %}</li>
-                <li>{% t remittance_3 %}</li>                
+                <li>{% t remittance_3 %}</li>
               </ul>
               <label>{% t q2_2021 %}</label>
               <ul class="roadmap_list">
@@ -707,6 +707,7 @@ description: meta.description
             <div class="partner_column">
               <h3>{% t partners_media_title %}</h3>
               <a href="https://coinnewsextra.com/" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/partners/coinnewsextra.png" /></a>
+              <a href="" target="_blank" rel="noreferrer"><img class="exchange-pic" src="assets/images/partners/coinnewsnet.png" /></a>
             </div>
           </div>
 
